# UpRace

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: config.ini
docs/: err_function.txt
settings/: ai_track1.txt  ai_track2.txt  checkpoint.txt  kart0.ini  kart1.ini  kart2.ini  kart3.ini  kart_player.ini  settings.ini  setup0.ini  setup1.ini  setup2.ini  setup3.ini  setup4.ini  setup5.ini
shaders/: shaders.frag  shaders.vert
src/: Advanced.hpp  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Configurator.cpp  Configurator.h  Configurator.hpp  Core.h  ExtConfig.cpp  ExtConfig.h  ExtConfigStr.cpp  ExtConfigStr.h  HUD.cpp  HUD.h  Kart.cpp  Kart.h  Keyboard.cpp  Keyboard.h  Main.cpp  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  Object.cpp  Object.h  OpenGL.cpp  OpenGL.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  Textures.cpp  Textures.h  Timer.cpp  Timer.h  Types.h  UpRace.cpp  (+2 more)
